feat(IN-875): melhorias fonte, fix de varios erros que estavam acontecendo

--- a/src/app/components/modais-empresas/modais-empresa.component.html
+++ b/src/app/components/modais-empresas/modais-empresa.component.html
@@ -119,7 +119,8 @@
             class="form-control" placeholder="" disabled="true">
         </div>
         <div class="col">
-          <label>Empresa</label>
+
+          <label>Empresa {{ selectedEmpresaModalCreate | json}}</label>
           <p-dropdown [filter]="true" filterBy="nome" [showClear]="true" placeholder="Select a Country"
             [style]="{'minWidth':'100%'}" [options]="empresasModal.data"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedEmpresaModalCreate"
             optionLabel="nome"></p-dropdown>
