--- a/src/assets/theme-primeng.css
+++ b/src/assets/theme-primeng.css
@@ -1,3 +1,11 @@
+.p-datatable table {
+  border-collapse: collapse;
+  min-width: 100%;
+  font-size: 10px;
+  table-layout: fixed;
+}
+
+
 /*Input*/
 body .ui-inputtext:enabled:focus:not(.ui-state-error) {
   border-color: orange !important;
