--- a/src/app/pages/private/listempresasdctf/listempresasdctf.component.css
+++ b/src/app/pages/private/listempresasdctf/listempresasdctf.component.css
@@ -1,3 +1,16 @@
 .filtros{
     padding: 10px !important;
 }
+
+
+.p-datatable .p-datatable-thead > tr > th {
+    text-align: left;
+    padding: 0.571rem 0.857rem;
+    border: 1px solid #c8c8c8;
+    border-width: 1px 1px 1px 1px;
+    font-weight: 700;
+    color: #333333;
+    background: #f4f4f4;
+    transition: background-color 0.2s, box-shadow 0.2s;
+    font-size: 10px
+}
