--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -4,6 +4,7 @@
     (onOpened)="onOpenedFiltersScreen($event)"
     [idsetor]="idsetor"
     [competenciasFilter]="competenciasFilter"
+    (searchedData)="searchedData($event)"
   >
   </app-filtros-tela-principal>
 
