--- a/src/app/components/filtros-tela-principal/filtros-listagem-empresas/modais-empresas/filtros-tela-principal.component.html
+++ b/src/app/components/filtros-tela-principal/filtros-listagem-empresas/modais-empresas/filtros-tela-principal.component.html
@@ -1,18 +1,25 @@
 <div>
   <p-sidebar [style]="{'height':'50000px',  'z-index':'10000'}" (onHide)="onHide()" [(visible)]="showFilters">
-    <p-accordion>
-      <p-accordionTab header="Busca por competência">
-        <p-dropdown style="padding-bottom: 10px;" [options]="competenciasFilter" [ngModelOptions]="{standalone: true}"
-          [(ngModel)]="selectedFilterCompetencia" optionLabel="name" [style]="{'minWidth':'100%'}" optionValue="value">
-        </p-dropdown>
-        <p-button (click)="findByCompetencia()" label="Pesquisar"></p-button>
-      </p-accordionTab>
-      <p-accordionTab header="Header 2">
-        Content 2
-      </p-accordionTab>
-      <p-accordionTab header="Header 3">
-        Content 3
-      </p-accordionTab>
-    </p-accordion>
+    <h4><i class="fa fa-filter mb-3"></i> Filtro
+      <button  class="btn btn-outline-danger btn-sm float-right"
+      style="margin: auto!important;">
+      <i class="fa fa-eraser"></i> Limpar</button>
+    </h4>
+  
+      <div class="row mx-1 mt-3">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 px-1" style="padding: 0;">
+            <div class="ui-grid ui-grid-responsive ui-fluid">
+                <label for="responsavel">Competência</label>
+              <div class="ui-grid-row">
+                  <div class="ui-grid-col-12">
+                    <p-dropdown style="padding-bottom: 10px;" [options]="competenciasFilter" [ngModelOptions]="{standalone: true}"
+                    [(ngModel)]="selectedFilterCompetencia" optionLabel="name" [style]="{'minWidth':'100%'}" optionValue="value">
+                  </p-dropdown>
+                  <p-button (click)="findByCompetencia()" label="Pesquisar"></p-button>
+                  </div>
+              </div>
+            </div>
+        </div>
+      </div>
   </p-sidebar>
 </div>
