--- a/src/app/pages/private/dashboard/dashboard.component.html
+++ b/src/app/pages/private/dashboard/dashboard.component.html
@@ -12,5 +12,6 @@
   [totaldata]="counttotaldata" (loadnextpage)="loadNextPage($event)" (loadbackpage)="loadBackPage($event)"
   [currentlast]="currentlast" (searchdata)="searchCompetencia($event)" (onchangData)="onChangData()"
   (clearData)="clearData()"
+  (restoreSearchEvent)="restoreSearchEvent()"
   >
 </app-table-component>
