--- a/src/app/components/filtros-listagem-empresas/modais-empresas/filtros-listagem-empresas.component.html
+++ b/src/app/components/filtros-listagem-empresas/modais-empresas/filtros-listagem-empresas.component.html
@@ -2,7 +2,7 @@
 
   <p-sidebar  [style]="{'height':'50000px',  'z-index':'10000'}" (onHide)="onHide()"  [(visible)]="showFilters">
     <h4><i class="fa fa-filter mb-3"></i> Filtro
-      <button  class="btn btn-outline-danger btn-sm float-right"
+      <button (click)="clearFilter()"   class="btn btn-outline-danger btn-sm float-right"
       style="margin: auto!important;">
       <i class="fa fa-eraser"></i> Limpar</button>
     </h4>
@@ -11,7 +11,7 @@
     <div class="row mx-1 mt-3">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 px-1" style="padding: 0;">
           <div class="ui-grid ui-grid-responsive ui-fluid">
-              <label for="responsavel">Empresa</label>
+              <label for="responsavel">Empresa {{selectedEmpresaFiltro}}</label>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-12">
                   <p-dropdown [filter]="true" filterBy="name"  placeholder="Select a Country"
@@ -113,24 +113,18 @@
 
   
 <div class="row">
-  <div class="col-12 px-0" style="display: flex;justify-content: space-between;align-items: flex-end;">
-    <div class="ui-g ui-fluid">
-      <div class="ui-inputgroup">
-        <button (click)="showFiltersTrigger()" class="btn btn-sm btn-warning mb-1 ml-1">
-          <i class="fa fa-filter" title="Filtrar dados"></i></button>
+  <div style="padding: 10px;" >
+    <button (click)="showFiltersTrigger()" class="btn btn-sm btn-warning mb-1 ml-1">
+      <i class="fa fa-filter" title="Filtrar dados"></i></button>
 
-        <button class="btn btn-sm btn-outline-dark mb-1 mx-1" >
-          <i class="fa fa-file-excel" title="Exportar para Excel"></i></button>
-
-         
-          <div _ngcontent-otj-c64="" class="p-inputgroup"><span _ngcontent-otj-c64="" class="p-inputgroup-addon"><i _ngcontent-otj-c64="" class="pi pi-search"></i></span><input _ngcontent-otj-c64="" type="text" pinputtext="" placeholder="Buscar" class="p-inputtext p-component p-element ng-untouched ng-pristine ng-valid"></div>
-      </div>
-    
-  
-    </div>
+    <button class="btn btn-sm btn-outline-dark mb-1 mx-1" >
+      <i class="fa fa-file-excel" title="Exportar para Excel"></i></button>
   </div>
 
-
-
-
+  <div class="col-6">
+    <div  style="padding: 4px;" class="p-inputgroup">
+      <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+      <input type="text" pInputText placeholder="Username">         
+    </div>
+  </div>
 </div>
