--- a/src/app/components/table-component/table-component.component.html
+++ b/src/app/components/table-component/table-component.component.html
@@ -5,6 +5,7 @@
     [idsetor]="idsetor"
     [competenciasFilter]="competenciasFilter"
     (searchedData)="searchedData($event)"
+    (restoreSearch)="restoreSearch()"
   >
   </app-filtros-tela-principal>
 
@@ -13,16 +14,11 @@
   <div style="padding-bottom: 10px;padding-top:10px" class="row">
     <div class="col-3">
       <span class="p-buttonset">
-        <button (click)="showFiltersTrigger()" type="button" pButton pRipple icon="pi pi-filter" class="mr-2" pTooltip="Mostar filtros"
-        tooltipPosition="bottom"></button>
-        <button type="button" pButton pRipple icon="pi pi-file" class="mr-2" pTooltip="Baixar registros em formato CSV"
-          tooltipPosition="bottom"></button>
-        <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportDataToXlsx()" pTooltip="Baixar registros em formato XLS"
-          class="p-button-success mr-2"  tooltipPosition="bottom"></button>
-        <button type="button" pButton pRipple icon="pi pi-file-pdf" class="p-button-warning mr-2" pTooltip="Baixar registros em formato PDF"
-          tooltipPosition="bottom"></button>
-
-        <p-button  pTooltip="Gerar competencia"  tooltipPosition="bottom" (click)="openModalGerarCompetencia()">Gerar Competencia</p-button>
+        <button (click)="showFiltersTrigger()" class="btn btn-sm btn-warning mb-1 ml-1">
+          <i class="fa fa-filter" title="Filtrar dados"></i></button>
+        <button (click)="exportDataToXlsx()" class="btn btn-sm btn-outline-dark mb-1 mx-1" >
+          <i class="fa fa-file-excel" title="Exportar para Excel"></i></button>
+         <button (click)="openModalGerarCompetencia()" pButton type="button" label="Gerar Competência" icon="pi pi-check" class="p-button-sm"></button>
       </span>
     </div>
 
@@ -32,6 +28,8 @@
         <input type="text" [(ngModel)]="searchValue" (input)="searchData()" pInputText placeholder="Buscar">
       </div>
     </div>
+
+    
   </div>
 
   <app-modais-empresas [displaymodalstatusCompetencia]="modalstatusCompetencia" [idresponsavel]="idresponsavel"
