feat(IM-875): impplementacao paginacao, lista empresas

--- a/src/app/components/modais-empresas/modais-empresa.component.html
+++ b/src/app/components/modais-empresas/modais-empresa.component.html
@@ -125,7 +125,7 @@
         </div>
         <div class="col">
 
-          <label>Empresa {{ selectedEmpresaModalCreate | json}}</label>
+          <label>Empresa</label>
           <p-dropdown [filter]="true" filterBy="nome" [showClear]="true" placeholder="Select a Country"
             [style]="{'minWidth':'100%'}" [options]="empresasModal.data"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedEmpresaModalCreate"
             optionLabel="nome"></p-dropdown>
