--- a/src/app/components/modais-listagem-empresas/modais-listagem-empresas.html
+++ b/src/app/components/modais-listagem-empresas/modais-listagem-empresas.html
@@ -34,7 +34,7 @@
         <input type="hidden" id="id_empresa_competencia" class="form-control" placeholder="">
         <input type="hidden" id="empresa"  [(ngModel)]="payloadModalEditEmpresaDctf.id_empresa" class="form-control" placeholder="">
         <div class="col">
-          <label>Competência payloadModalEditEmpresaDctf{{payloadModalEditEmpresaDctf.id_empresa_dctf}}</label>
+          <label>Competência</label>
           <input type="text"   [(ngModel)]="payloadModalEditEmpresaDctf.competencia" [ngModelOptions]="{standalone: true}"
             class="form-control" placeholder="" disabled="true">
         </div>
