--- a/src/app/components/filtros-listagem-empresas/modais-empresas/filtros-listagem-empresas.component.html
+++ b/src/app/components/filtros-listagem-empresas/modais-empresas/filtros-listagem-empresas.component.html
@@ -11,11 +11,11 @@
     <div class="row mx-1 mt-3">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 px-1" style="padding: 0;">
           <div class="ui-grid ui-grid-responsive ui-fluid">
-              <label for="responsavel">Empresa {{selectedEmpresaFiltro}}</label>
+              <label for="responsavel">Empresa</label>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-12">
-                  <p-dropdown [filter]="true" filterBy="name"  placeholder="Select a Country"
-                  [style]="{'minWidth':'100%'}" (onClear)="onClearFields('empresa')"  [options]="filtroEmpresas"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedEmpresaFiltro" (onChange)="setFilter('empresa', selectedEmpresaFiltro.value)"  [showClear]="true" placeholder="Select a Country" optionLabel="name"></p-dropdown>
+                  <p-dropdown [filter]="true" filterBy="name"  placeholder="Selecione a empresa"
+                  [style]="{'minWidth':'100%'}" (onClear)="onClearFields('empresa')"  [options]="filtroEmpresas"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedEmpresaFiltro" (onChange)="setFilter('empresa', selectedEmpresaFiltro.value)"  [showClear]="true" placeholder="Selecione a empresa" optionLabel="name"></p-dropdown>
                 </div>
             </div>
           </div>
@@ -44,7 +44,7 @@
               <label for="responsavel">Tarefa</label>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-12">
-                  <p-dropdown [filter]="true" filterBy="name"  (onClear)="onClearFields('tarefa')" [options]="tarefas" (onChange)="setFilter('tarefa', selectedTarefaFiltro.value)"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedTarefaFiltro"   [showClear]="true" placeholder="Select a Country"
+                  <p-dropdown [filter]="true" filterBy="name"  (onClear)="onClearFields('tarefa')" [options]="tarefas" (onChange)="setFilter('tarefa', selectedTarefaFiltro.value)"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedTarefaFiltro"   [showClear]="true" placeholder="Selecione a Tarefa"
                   [style]="{'minWidth':'100%'}" 
                   optionLabel="name"></p-dropdown>  
                 </div>
@@ -59,7 +59,7 @@
               <label for="responsavel">Status</label>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-12">
-                  <p-dropdown [filter]="true" filterBy="name"  (onClear)="onClearFields('status')"  [options]="status" (onChange)="setFilter('status', selectedStatusFiltro.value)"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedStatusFiltro"   [showClear]="true" placeholder="Select a Country"
+                  <p-dropdown [filter]="true" filterBy="name"  (onClear)="onClearFields('status')"  [options]="status" (onChange)="setFilter('status', selectedStatusFiltro.value)"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedStatusFiltro"   [showClear]="true" placeholder="Selecione o Status"
                   [style]="{'minWidth':'100%'}" 
                   optionLabel="name"></p-dropdown>
                 </div>
@@ -75,7 +75,7 @@
               <label for="responsavel">Tributação</label>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-12">
-                  <p-dropdown [filter]="true" filterBy="name"  (onClear)="onClearFields('tributacao')" [options]="tributacao" (onChange)="setFilter('tributacao', selectedTributacaoFiltro.value)"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedTributacaoFiltro"  [showClear]="true" placeholder="Select a Country"
+                  <p-dropdown [filter]="true" filterBy="name"  (onClear)="onClearFields('tributacao')" [options]="tributacao" (onChange)="setFilter('tributacao', selectedTributacaoFiltro.value)"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedTributacaoFiltro"  [showClear]="true" placeholder="Selecione a Tributação"
                   [style]="{'minWidth':'100%'}" 
                   optionLabel="name"></p-dropdown>
                 </div>
@@ -91,7 +91,7 @@
               <label for="responsavel">Usuário Executor</label>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-12">
-                  <p-dropdown [filter]="true" filterBy="name"  (onClear)="onClearFields('tributacao')" [options]="tributacao" (onChange)="setFilter('tributacao', selectedTributacaoFiltro.value)"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedTributacaoFiltro"  [showClear]="true" placeholder="Select a Country"
+                  <p-dropdown [filter]="true" filterBy="name"  (onClear)="onClearFields('tributacao')" [options]="usuariosExecutores" (onChange)="setFilter('tributacao', selectedTributacaoFiltro.value)"  [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedUsuarioExecutor"  [showClear]="true" placeholder="Selecionae o usuario executor"
                   [style]="{'minWidth':'100%'}" 
                   optionLabel="name"></p-dropdown>
                 </div>
@@ -126,5 +126,18 @@
       <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
       <input type="text" pInputText placeholder="Username">         
     </div>
+   
   </div>
+
+  <div class="col-3">
+      <p-multiSelect  optionLabel="header" 
+      selectedItemsLabel="Exibindo {0} campos"
+    
+      [options]="setoresVisibilidade"
+      optionLabel="name"
+      [style]="{minWidth: '200px', minHeight: '40px', height: '100%', borderRadius: '5px;'}"
+      defaultLabel="Campos setores exibidos">
+    </p-multiSelect>
+  </div>
+ 
 </div>
